# internal/handler/shop_handler.go
@@ -29,6 +29,8 @@ func RegisterShopHandler(e *echo.Echo, svc service.ShopService) {
 	e.GET("shop-products/:id", handler.GetShopProduct)
 	e.PUT("shop-products/:id", handler.UpdateShopProduct)
 	e.DELETE("shop-products/:id", handler.DeleteShopProduct)
+
+	e.POST("shops/transfer", handler.CreateTransferProduct)
 }
 
 func NewShopHandler(service service.ShopService) *ShopHandler {
@@ -279,4 +281,28 @@ func (h *ShopHandler) DeleteShopProduct(c echo.Context) error {
 	}
 
 	return c.JSON(http.StatusNoContent, model.Response{Message: "success"})
+}
+
+// CreateTransferProduct Create Transfer Product
+// @Summary Transfer Product an shopproduct by ID
+// @Description Remove an shopproduct from the system by its ID
+// @Tags shops
+// @Param id path int true "ShopProduct ID"
+// @Param transferProduct body model.TransferProduct true "Transfer Product Request"
+// @Success 200
+// @Failure 400 {object} model.Response
+// @Failure 500 {object} model.Response
+// @Router /shops/transfer [post]
+func (h *ShopHandler) CreateTransferProduct(c echo.Context) error {
+	ctx := c.Request().Context()
+	var transferProduct model.TransferProduct
+	if err := c.Bind(&transferProduct); err != nil {
+		return c.JSON(http.StatusBadRequest, model.Response{Message: "Invalid input"})
+	}
+
+	if err := h.service.CreateTransferProduct(ctx, &transferProduct); err != nil {
+		return c.JSON(http.StatusInternalServerError, model.Response{Message: err.Error()})
+	}
+
+	return c.JSON(http.StatusOK, model.Response{Message: "success"})
 }
